Html4はuploading中にelementにclassをつけるように変更 あわせて、アイコン・uploadingアニメを追加
git-svn-id: https://scrupload.googlecode.com/svn/branches/dev@73 6a939483-aa53-8207-cb86-4a7756a7ee3a

--- a/css/jquery.scropThumb.css
+++ b/css/jquery.scropThumb.css
@@ -1,5 +1,17 @@
 @CHARSET "UTF-8";
 
+.scr_html4_container{
+	padding-left: 18px;
+	background-repeat: no-repeat;
+	background-position: 0px 3px;
+	background-image: url("img/upload.png");
+}
+
+.scr_html4_container.scr_uploading{
+	background-image: url("img/uploading.gif");
+	
+}
+
 .scr_thumb_image{
 	float: left;
 }
